add module info params for JVM > 8